@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020 Abex
+ * Copyright (c) 2021 Abex
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -22,29 +22,48 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package net.runelite.pluginhub.uploader;
+repositories {
+	maven {
+		url = 'https://repo.runelite.net'
+	}
+	mavenCentral()
+}
 
-import com.google.common.collect.Sets;
-import java.util.Set;
-import lombok.Getter;
-import lombok.Setter;
+configurations {
+	runelite {
+		resolutionStrategy {
+			// we don't run any code from this configuration
+			disableDependencyVerification()
+		}
+	}
+}
 
-public class ManifestDiff
-{
-	@Getter
-	private Set<String> remove = Sets.newConcurrentHashSet();
+def runeLiteVersion = file("../../runelite.version").text.trim()
 
-	@Getter
-	private Set<ExternalPluginManifest> add = Sets.newConcurrentHashSet();
+dependencies {
+	implementation "org.slf4j:slf4j-simple:1.7.10"
+	implementation "com.google.code.findbugs:jsr305:3.0.2"
+	implementation "com.google.guava:guava:23.2-jre"
+	implementation "org.ow2.asm:asm:7.0"
+	implementation "com.google.code.gson:gson:2.8.5"
 
-	@Getter
-	private Set<String> copyFromOld = Sets.newConcurrentHashSet();
+	def lombok = "org.projectlombok:lombok:1.18.4"
+	compileOnly lombok
+	annotationProcessor lombok
+	testCompileOnly lombok
+	testAnnotationProcessor lombok
 
-	@Getter
-	@Setter
-	private String oldManifestVersion;
+	runelite group: 'net.runelite', name: 'client', version: runeLiteVersion
+	runelite group: 'net.runelite', name: 'jshell', version: runeLiteVersion
+	runelite lombok
+}
 
-	@Getter
-	@Setter
-	private boolean ignoreOldManifest;
+compileJava.options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"]
+
+def apiFilePath = new File(project.buildDir, "api")
+
+task api(type: JavaExec) {
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = "net.runelite.pluginhub.apirecorder.ClassRecorder"
+	args = [apiFilePath] + configurations.runelite.files
 }
